# place

./: .gitignore  Cargo.toml  Makefile  config.toml  place.config
backend/: Cargo.toml
backend/src/: actions.rs  lib.rs  main.rs  place_fs.rs
config/: config.toml
constants/: Cargo.toml  build.rs  constants.rs
constants/src/: lib.rs
external-front/cat/: Cargo.toml
external-front/print/: Cargo.toml
frontend/mkfile/: Cargo.toml
frontend/print/src/: main.rs
internal-front/cndir/: Cargo.toml
internal-front/cndir/src/: main.rs
internal-front/cnfile/: Cargo.toml
internal-front/cnfile/src/: main.rs
internal-front/lib/: Cargo.toml
internal-front/lib/src/: lib.rs
internal-front/mkdir/: Cargo.toml
internal-front/mkdir/src/: main.rs
internal-front/mkfile/: Cargo.toml
internal-front/mkfile/src/: main.rs
internal-front/mvdir/: Cargo.toml
internal-front/mvdir/src/: main.rs
internal-front/mvfile/: Cargo.toml
internal-front/mvfile/src/: main.rs
internal-front/rmdir/: Cargo.toml
internal-front/rmdir/src/: main.rs
internal-front/rmfile/: Cargo.toml
internal-front/rmfile/src/: main.rs
internal-front/rnfile/: Cargo.toml
internal-front/rnfile/src/: main.rs
internal-front/setbyte/: Cargo.toml
internal-front/setbyte/src/: main.rs
lib/: Cargo.toml
lib/src/: file.rs  fs.rs  lib.rs  syscalls.rs
