#[package]
#name = "place_init"
#version = "0.1.0"
#edition = "2021"

#[dependencies]
#config = "0.15.4"

[workspace]
members = ["backend", "frontend/*", "lib"]
resolver = "2"

[workspace.dependencies]
users = "0.11.0"
serde = "1.0.219"
chacha20poly1305 = "0.10.1"
crc = "3.2.1"
place_constants = { path = "constants" }
place_lib = { path = "lib" }
