[package]
name = "place_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
postcard = { workspace = true }
crc = { workspace = true }
users = { workspace = true }
chacha20poly1305 = { workspace = true }
place_constants = { workspace = true }
place_lib = { workspace = true }
