[package]
name = "place_constants"
version = "0.1.0"
edition = "2021"
description = "Crate intended for defining constants at compile time"

[dependencies]
chacha20poly1305 = { workspace = true }

[build-dependencies]
chacha20poly1305 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = "0.8.23"
